--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,7 +37,8 @@ h6 {
 }
 
 p {
-  margin: 0 0 30px;
+    margin: 0 0 30px;
+    font-family: Roboto, sans-serif;
 }
 
 ul li {
@@ -77,7 +78,7 @@ ul li {
   font-size: 1.5em;
 }
 .social-block li a:hover, .social-block li a:focus {
-  color: #000;
+    color: #000;
 }
 
 .btn.active.focus,
@@ -86,7 +87,7 @@ ul li {
 .btn:active.focus,
 .btn:active:focus,
 .btn:focus {
-  outline: none;
+    outline: none;
 }
 
 .btn {
@@ -146,11 +147,15 @@ ul li {
 	overflow:hidden;
 }
 .section-title {
-  color: #313131;
-  letter-spacing: 1px;
-  margin: 0 0 20px;
-  text-transform: uppercase;
-  text-align: center;
+    color: #313131;
+    letter-spacing: 1px;
+    margin-top: 40px;
+    margin-right: 0;
+    margin-left: 0;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 40px;
 }
 
 /* 
@@ -197,8 +202,16 @@ ul li {
  * 3.4 Helper Class: button
  */
 .btn-white {
-  color: #000;
-  background-color: #fff;
+    color: #000;
+    background-color: #fff;
+    margin-top: 60px;
+    margin-right: 60px;
+    margin-left: 60px;
+    margin-bottom: 60px;
+    padding-top: 10px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-left: 40px;
 }
 .btn-white:hover, .btn-white:focus {
   color: #000;
@@ -242,6 +255,10 @@ ul li {
 .bg-image-2::before {
   background-color: rgba(0, 0, 0, 0.7);
 }
+.row .col-md-4 .speaker {
+}
+
+
 
 @media (min-width: 768px) {
   .section {
@@ -260,32 +277,33 @@ ul li {
  * 4.0 Navigation
  */
 .navbar-custom {
-  border: 0;
-  margin: 0;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: #000;
-  -webkit-transition: all 0.2s linear 0s;
-          transition: all 0.2s linear 0s;
+    border: 0;
+    margin: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: rgba(0,49,143,1.00);
+    -webkit-transition: all 0.2s linear 0s;
+    transition: all 0.2s linear 0s;
 }
 .navbar-custom .navbar-nav li {
   margin: 0;
 }
 .navbar-custom .navbar-nav > li > a {
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 12px;
-  font-weight: 400;
-  border-bottom: 1px solid transparent;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: bolder;
+    border-bottom: 1px solid transparent;
 }
 .navbar-custom .navbar-nav > li > a:focus, .navbar-custom .navbar-nav > li > a:hover {
     background-color: transparent;
     border-color: rgba(255, 255, 255, 0.5);
-    font-size: 14px;
-    font-weight: 400;
+    font-size: 22px;
+    font-weight: bolder;
+    font-family: Roboto, sans-serif;
 }
 .navbar-custom .navbar-nav > .active > a {
-  border-color: rgba(255, 255, 255, 0.5);
+    border-color: transparent;
 }
 
 .navbar-toggle {
@@ -298,10 +316,10 @@ ul li {
 }
 
 .navbar-solid {
-  background-color: #000 !important;
-  padding: 0 !important;
-  -webkit-transition: all 0.2s linear 0s;
-          transition: all 0.2s linear 0s;
+    background-color: rgba(0,63,136,0.70) !important;
+    padding: 0 !important;
+    -webkit-transition: all 0.2s linear 0s;
+    transition: all 0.2s linear 0s;
 }
 
 .site-branding {
@@ -310,12 +328,13 @@ ul li {
   margin-left: 10px;
 }
 .site-branding .logo {
-  color: #fff;
-  font-size: 14px;
-  font-weight: 700;
-  margin-right: 5px;
-  letter-spacing: 3px;
-  text-transform: uppercase;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 700;
+    margin-right: 5px;
+    letter-spacing: -1px;
+    text-transform: uppercase;
+    margin-top: 0px;
 }
 .site-branding .logo:focus, .site-branding .logo:hover {
   text-decoration: none;
@@ -343,16 +362,16 @@ ul li {
   background-color: rgba(0, 0, 0, 0.5);
 }
 .site-header .intro {
-  color: #fff;
-  position: relative;
-  text-align: center;
-  text-transform: uppercase;
-  width: 100%;
-  z-index: 1;
-  padding: 0 15px;
-  display: table-cell;
-  vertical-align: middle;
-  height: 100vh;
+    color: #fff;
+    position: relative;
+    text-align: center;
+    text-transform: uppercase;
+    width: 100%;
+    z-index: 1;
+    padding: 0 15px;
+    display: table-cell;
+    vertical-align: middle;
+    height: 100vh;
 }
 .site-header .intro h2 {
   margin-top: 0px;
@@ -361,14 +380,18 @@ ul li {
 }
 .site-header .intro h1 {
     margin-top: 0px;
-    font-size: 16mm;
-    font-weight: 900;
-    font-family: inherit;
+    font-size: 50px;
+    font-weight: 800;
+    align-items: center;
+    line-height: 100px;
+    color: rgba(255,255,255,1);
 }
 .site-header .intro p {
-    font-size: 8mm;
+    font-size: 35px;
     margin-bottom: 10px;
-    font-weight: 300;
+    font-weight: 500;
+    align-items: center;
+    text-align: center;
 }
 
 @media (min-width: 768px) {
@@ -574,7 +597,14 @@ ul li {
   }
 
   .section-title {
-    margin: 0 0 30px;
+    margin-top: 0px;
+    margin-right: 0;
+    margin-bottom: 30px;
+    margin-left: 0;
+    padding-top: 60px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    padding-left: 15px;
   }
 
   figure {
@@ -616,3 +646,148 @@ ul li {
 .site-footer .social-block li a:hover, .site-footer .social-block li a:focus {
   opacity: 0.8;
 }
+.row{
+	color: #000000;
+    position: relative;
+    width: 100%;
+    z-index: 1;
+    padding: 0 15px;
+}
+.row p{
+    font-size: 25px;
+    font-weight: 600;
+    line-height: 50px;
+}
+
+.row h4
+{
+    font-size: 30px;
+    margin-bottom: 40px;
+}
+
+
+.About {
+  width: 100%;
+	height: 100%;
+	min-height: 100vh;
+    position: relative;
+	text-align: left;
+    background: url(../images/backgrounds/bg-1.jpg) no-repeat center center/cover;
+	display: table;
+}
+.About::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(255,255,255,0.9);
+}
+
+.committee {
+    background-color: rgba(0,63,136,0.1);
+    height: 800px;
+}
+.committee h4{
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 30px;
+}
+.committee p{
+    text-align: center;
+    margin: 0px;
+    padding: 0px;
+	font-size: 20px;
+}
+
+.speakers_photo {
+	float:left;
+	width:120px;
+
+}
+
+.speakers_intro {
+    float: right;
+    width: 200px;
+    line-height: 15px;
+}
+
+.speakers_intro h4{
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 15px;
+	color: rgba(0,63,136,0.8) 
+}
+
+.speakers_intro h5{
+	margin-top: 0px;
+	margin-bottom: 0px;
+	font-size:15px;
+	font-style:italic;
+	color: rgba(0,0,0,1);
+	
+}
+.speakers_intro p{
+	margin-top: 0px;
+	font-size:15px;
+	font-weight: 400;
+	color: rgba(0,0,0,1);
+	
+}
+
+.speakers_title{
+	font-weight: 1000;
+}
+.speakers_border{
+	border-style: solid;
+	color: rgba(87,87,87,0.5);
+	margin-bottom: 10px;
+	margin-left: 5px;
+	width: 32%;
+	padding-left: 0px;
+}
+
+.dates-box
+{
+    background-color: rgba(200,200,200,0.5);
+    height: 300px;
+	padding: 0px;
+	margin: 5px;
+	width: 32%;
+}
+
+.dates-box h3{
+	color: rgba(255,255,255,1.00);
+	text-align: center;
+    margin:0px;
+	height: 60px;
+	padding-top:20px; 	
+	background-color: rgba(0,63,136,1.00);
+}
+
+.dates-box h4{
+	color: rgba(0,0,0,1.00);
+	text-align: center;
+	line-height: normal;
+}
+
+.dates-box-event{
+    width: 100%;
+	background-color: rgba(0,63,136,1.00);
+}
+.organizers{
+	width: 300px;
+	margin: 10px;
+	float: left;
+}
+
+.organizers h5{
+	text-align: center;
+	font-size: 20px;
+	color: rgba(0,63,136,0.7);
+	
+}
+
+
